# Project-Euler

./: README.md  mypy.ini  problem_001.py  problem_002.py  problem_003.py  problem_004.py  problem_005.py  problem_006.py  problem_007.py  problem_008.py  pyproject.toml  pytest.ini
.circleci/: config.yml
euler/: main.py  problem_001.py  problem_002.py  problem_003.py  problem_004.py  problem_005.py  problem_006.py  problem_007.py  problem_008.py  problem_009.py  problem_010.py
euler/eulerpyramid/: README
python/: p001.py  p003.py  p005.py  p006.py  p007.py  p008.py  p009.py  p010.py  problem_002.py  problem_003.py  problem_004.py  problem_005.py  problem_006.py  problem_007.py  problem_008.py  test_002.py  test_003.py  test_004.py  test_005.py  test_006.py  test_007.py  test_008.py  test_009.py  test_010.py
python/eulerpyramid/: eulerpyramid.py_  solve.py_
tests/: __init__.py  conftest.py  test_001.py  test_002.py  test_003.py  test_004.py  test_005.py  test_006.py  test_007.py  test_008.py  test_009.py  test_010.py  test_main.py
